--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "@nuxt/image": "^0.3.0",
     "@nuxtjs/axios": "^5.13.0",
     "buefy": "^0.9.4",
     "bulma": "^0.9.2",
