--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@mdi/font": "^5.9.55",
     "@nuxt/image": "^0.3.0",
     "@nuxtjs/axios": "^5.13.0",
     "buefy": "^0.9.4",
     "bulma": "^0.9.2",
+    "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.8.3",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.12",
