--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/image": "^0.3.0",
     "@nuxtjs/axios": "^5.13.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "buefy": "^0.9.4",
     "bulma": "^0.9.2",
     "cookie-universal-nuxt": "^2.1.4",
