--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/proxy": "^2.1.0",
     "buefy": "^0.9.4",
-    "bulma": "^0.9.2",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.8.3",
-    "node-sass": "^5.0.0",
-    "nuxt": "^2.14.12",
-    "regenerator-runtime": "^0.13.7",
-    "sass-loader": "^10.1.1"
+    "nuxt": "^2.15.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0"
+  },
+  "resolutions": {
+    "nuxt/@nuxt/components": "2.0.0"
   },
   "devDependencies": {}
 }
